--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
             <div>
                 <button class="btn btn-secondary" style="width: auto; padding: 10px 20px;"
-                    onclick="window.location.href='index.html'">
+                    onclick="window.location.href='app.html'">
                     Login / App
                 </button>
             </div>
@@ -118,3 +118,4 @@
 </body>
 
 </html>
+
