--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
                     No clutter, just gains. Start your journey today with our premium dashboard.
                 </p>
                 <div class="cta-group">
-                    <button class="btn btn-primary btn-large" onclick="window.location.href='index.html'">
+                    <button class="btn btn-primary btn-large" onclick="window.location.href='app.html'">
                         <i class="ph-bold ph-play"></i> Start Your Workout
                     </button>
-                    <button class="btn btn-secondary btn-large" onclick="window.location.href='index.html'">
+                    <button class="btn btn-secondary btn-large" onclick="window.location.href='app.html'">
                         <i class="ph-bold ph-google-logo"></i> Sync Data
                     </button>
                 </div>
@@ -118,4 +118,5 @@
 </body>
 
 </html>
+
 
